--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Example of building js sdk with webpack 5",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/marcin-wosinek/webpack-sdk/issues"
   },
-  "homepage": "https://github.com/marcin-wosinek/webpack-sdk#readme"
+  "homepage": "https://github.com/marcin-wosinek/webpack-sdk#readme",
+  "devDependencies": {
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2"
+  }
 }
