--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-sdk",
   "version": "1.0.0",
   "description": "Example of building js sdk with webpack 5",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
